# agentic-search-engine

./: .env.example  .gitignore  LICENSE  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt
docs/: workflow-diagram.md
examples/: embedding_examples.py
src/agentic_search/: __init__.py
src/agentic_search/cache/: __init__.py  redis_cache.py  semantic_cache.py
src/agentic_search/config/: __init__.py  factory.py  settings.py
src/agentic_search/core/: __init__.py  exceptions.py  interfaces.py  logging.py  middleware.py  models.py
src/agentic_search/embeddings/: __init__.py  sentence_transformer.py
src/agentic_search/llm/: __init__.py  anthropic_llm.py  ollama_llm.py  openai_llm.py
src/agentic_search/pipeline/: __init__.py  rag_pipeline.py
src/agentic_search/retrievers/: __init__.py  qdrant_retriever.py  web_search_retriever.py
src/agentic_search/routers/: __init__.py  composite.py  llm_router.py  rule_based.py
src/agentic_search/ui/: __init__.py  cli.py  streamlit_app.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_router.py
web-client/: jest.config.js  package-lock.json  package.json  tailwind.config.ts
web-client/__mocks__/: react-markdown.js
web-client/__tests__/: page.test.tsx
web-client/src/app/: layout.tsx  page.tsx
